@@ -4,7 +4,7 @@ AC_PREREQ(2.50)
 AC_CONFIG_AUX_DIR(autotools)
 AC_CANONICAL_SYSTEM
 
-AM_INIT_AUTOMAKE(libdvbpsi4, 0.1.5)
+AM_INIT_AUTOMAKE(libdvbpsi4, 0.1.6)
 AM_CONFIG_HEADER(config.h)
 
 #AC_CANONICAL_HOST
